Change background image for scholar section

--- a/Blog/boredomBlog.css
+++ b/Blog/boredomBlog.css
@@ -269,7 +269,7 @@ body {
   padding: 20px;
 }
 .scholarImage {
-  background-image: url('../Images/Banner_GoogleScholar.jpg');
+  background-image: url('../Images/researchBanner.jpeg');
   width: 100%;
   height:100%;
   padding: 20px;
